--- a/Kiino/Kiino/Base.lproj/Main.storyboard
+++ b/Kiino/Kiino/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="DwD-WU-bPA">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="DwD-WU-bPA">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="WHAT ARE YOU LOOKING FOR?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8AU-lD-TG8">
-                                <rect key="frame" x="26" y="209" width="268.5" height="41"/>
+                                <rect key="frame" x="26" y="209" width="269" height="41"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="41" id="HZ9-KN-Xmc"/>
                                 </constraints>
@@ -34,6 +34,15 @@
                                     <segue destination="n4A-uH-r8l" kind="show" identifier="searching" id="HiE-BO-oM8"/>
                                 </connections>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HTk-37-mxV">
+                                <rect key="frame" x="136" y="67" width="49" height="30"/>
+                                <state key="normal" title="Logout">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="fbLogout:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="bVL-LN-It1"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.99215686270000003" green="0.52549019610000003" blue="0.1529411765" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -75,10 +84,10 @@
             </objects>
             <point key="canvasLocation" x="1443" y="339"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Navigation Search Controller-->
         <scene sceneID="VDy-Hk-eDU">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="OHa-sp-bC1" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="NavigationSearchController" automaticallyAdjustsScrollViewInsets="NO" id="OHa-sp-bC1" customClass="NavigationSearchController" customModule="Kiino" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="cYS-PB-z6a">
@@ -97,7 +106,7 @@
         <!--Login View Controller-->
         <scene sceneID="aZI-92-u5z">
             <objects>
-                <viewController id="DwD-WU-bPA" customClass="LoginViewController" customModule="Kiino" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SearchViewController" id="DwD-WU-bPA" customClass="LoginViewController" customModule="Kiino" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="WFD-mG-kXB"/>
                         <viewControllerLayoutGuide type="bottom" id="se7-KB-rij"/>
@@ -113,7 +122,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="OHa-sp-bC1" kind="presentation" modalTransitionStyle="crossDissolve" id="OKw-p7-zeb"/>
+                                    <action selector="fbLogin:" destination="DwD-WU-bPA" eventType="touchUpInside" id="ySH-Wi-Ime"/>
                                 </connections>
                             </button>
                         </subviews>
